--- a/assignment1/nbproject/project.properties
+++ b/assignment1/nbproject/project.properties
@@ -33,9 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/assignment1
 excludes=
+file.reference.jcalendar-1.3.3.jar=C:\\Program Files\\jcalendar-1.3.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
